tests/fixtures/errors/compilation-errors/src/MissingMain.elm
module MissingMain exposing (a)

a = 1
